--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -92,8 +92,8 @@
 
         <!-- Submit button -->
         <div class="row margin-top-seventyfive center-align">
-            <button type="submit" class="col s4 offset-s1 green-button-full">Save</button>
-            <button type="submit" class="col s4 offset-s1 grey-button-full">Cancel</button>
+            <button type="submit" class="col s5 offset-s1 m4 offset-m2 l3 offset-l3 green-button-full">Save</button>
+            <button type="submit" class="col s5 m4 l3 grey-button-full">Cancel</button>
         </div>
 
     </form>
