--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -31,6 +31,11 @@
                 </div>
             </div>
         </div>
+        <!-- Edit / Delete buttons -->
+        <div class="row margin-top-seventyfive center-align">
+            <a href="" class="col s5 offset-s1 m4 offset-m2 l3 offset-l3 button-edit">Edit</a>
+            <a href="" class="col s5 m4 l3 button-delete">Delete</a>
+        </div>
 
     {% endfor %}
 
