--- a/templates/myrecipes.html
+++ b/templates/myrecipes.html
@@ -26,7 +26,7 @@
 
     {% for myrecipe in myrecipes %}
         <div>
-            <a class="recipes-overlay-container" href="{{ url_for('get_recipes') }}">
+            <a class="recipes-overlay-container" href="{{ url_for('full_recipe', recipe_id=myrecipe._id) }}">
                 <img class="flex-image" src="{{ myrecipe.image }}" alt="Recipe">
                 <div class="recipes-overlay"></div>
                 <div class="recipes-title">{{ myrecipe.recipe_name }}</div>
