--- a/static/css/style.css
+++ b/static/css/style.css
@@ -63,6 +63,10 @@
     display: inline-block;
 }
 
+.display-inline {
+    display: inline;
+}
+
 /* General */
 
 body {
@@ -503,6 +507,12 @@ div strong {
 }
 
 .grey-button-full {
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px;
+    line-height: 3rem;
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin: 0px 12px;
     background-color: #888;
     color: #fff;
     border: none;
@@ -510,6 +520,7 @@ div strong {
     -moz-transition: background-color 0.3s ease-out;
     -o-transition: background-color 0.3s ease-out;
     transition: background-color 0.3s ease-out;
+    display: inline-block;
 }
 
 .grey-button-full:hover {
