--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -36,7 +36,22 @@
         {% if session.user|lower == fullrecipe.created_by|lower %}
             <div class="row margin-top-seventyfive center-align">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="col s5 offset-s1 m4 offset-m2 l3 offset-l3 button-edit">Edit</a>
-                <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="col s5 m4 l3 button-delete">Delete</a>
+                <!-- <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="col s5 m4 l3 button-delete">Delete</a> -->
+
+                <!-- Modal Trigger -->
+                <a class="col s5 m4 l3 button-delete modal-trigger" href="#modal1">Delete</a>
+
+                <!-- Modal Structure -->
+                <div id="modal1" class="modal">
+                    <div class="modal-content">
+                        <h5>Delete this recipe?</h5>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="modal-close waves-effect waves-green btn-flat modal-option">Yes</a>
+                        <a href="#!" class="modal-close waves-effect waves-green btn-flat modal-option">No</a>
+                    </div>
+                </div>
+
             </div>
         {% endif %}
 
