--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,9 @@
                     {% if session.user %}
                         <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
                         <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                        <li><a href="#">Categories</a></li>
+                        {% if session.user|lower == "admin"|lower %}
+                            <li><a href="{{ url_for('get_categories') }}">Categories</a></li>
+                        {% endif %}
                         <li><a href="{{ url_for('logout') }}">Log out</a></li>
                         <li>Hi, {{ username }}</li>
                     {% else %}
@@ -45,7 +47,9 @@
             {% if session.user %}
                 <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
                 <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                <li><a href="#">Categories</a></li>
+                {% if session.user|lower == "admin"|lower %}
+                    <li><a href="{{ url_for('get_categories') }}">Categories</a></li>
+                {% endif %}
                 <li><a href="{{ url_for('logout') }}">Log out</a></li>
             {% else %}
                 <li><a class="button-signup" href="{{ url_for('signup') }}">Sign up</a></li>
