--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,3 @@
-/* Table of Contents */
-
-
 /* Utility Classes */
 
 .margin-top-ten {
@@ -606,9 +603,36 @@ div strong {
     background-color: #94454a;
 }
 
+/* Add categories page */
+
+.green-border-button {
+    padding: 0.5rem 1.5rem;
+    border-radius: 10px;
+    line-height: 2.75rem;
+    font-size: 1.125rem;
+    font-weight: 500;
+    margin: 0px 12px;
+    background-color: #fff;
+    color: #244846;
+    border: 3px solid #244846;
+    box-sizing: border-box;
+    -webkit-transition: background-color 0.3s ease-out;
+    -moz-transition: background-color 0.3s ease-out;
+    -o-transition: background-color 0.3s ease-out;
+    transition: background-color 0.3s ease-out;
+    display: inline-block;
+    text-align: center;
+}
+
+.green-border-button:hover {
+    background-color: #244846;
+    color: #fff;
+}
+
 .cat-button-mobile {
     display: none;
 }
+
 
 /* Override Materialize */
 
@@ -659,7 +683,7 @@ div strong {
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 460px) {
     h3 {
         border-bottom: none;
         font-size: 2.25rem;
