--- a/templates/categories.html
+++ b/templates/categories.html
@@ -13,4 +13,10 @@
         </div>
     {% endfor %}
 
+    <div class="row">
+        <p class="col s6 m6 offset-m1 l4 offset-l2 card-panel category-field"> ... </p>
+        <a href="{{ url_for('add_category') }}" class="col s4 m4 l3 green-border-button cat-button-desktop">Add Category</a>
+        <a href="{{ url_for('add_category') }}" class="col s4 m4 l3 green-border-button cat-button-mobile"><i class="fas fa-plus"></i></a>
+    </div>
+
 {% endblock %}
