--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -8,7 +8,7 @@
     <form class="col s12 m10 offset-m1 l8 offset-l2 margin-top-twentyfive" method="POST" action="{{ url_for('add_category') }}">
         <!-- New Category -->
         <div class="row">
-            <label class="add-recipe-label" for="category_name"><i class="fas fa-folder-open add-recipe-icon"></i>New Category Name:</label>
+            <label class="add-recipe-label" for="category_name"><i class="fas fa-folder-open add-recipe-icon"></i>Category Name:</label>
             <div class="input-field col s12">
                 <input placeholder="(max 20 characters)" id="category_name" name="category_name" type="text"
                     maxlength="20" class="validate" required>
