Add Delete Category functionality

--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -39,10 +39,10 @@
                 <!-- <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}" class="col s5 m4 l3 button-delete">Delete</a> -->
 
                 <!-- Modal Trigger -->
-                <a class="col s5 m4 l3 button-delete modal-trigger" href="#modal1">Delete</a>
+                <a class="col s5 m4 l3 button-delete modal-trigger" href="#modal-a">Delete</a>
 
                 <!-- Modal Structure -->
-                <div id="modal1" class="modal">
+                <div id="modal-a" class="modal">
                     <div class="modal-content">
                         <h5>Delete this recipe?</h5>
                     </div>
