--- a/static/css/style.css
+++ b/static/css/style.css
@@ -383,6 +383,51 @@ h5 {
     text-overflow:ellipsis;
 }
 
+.clear-button {
+    padding: 0rem;
+    border-radius: 10px;
+    line-height: 3.75rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0px 2px;
+    /* border: 2px solid #888; */
+    background-color: #999;
+    color: #fff;
+    -webkit-transition: background-color 0.3s ease-out;
+    -moz-transition: background-color 0.3s ease-out;
+    -o-transition: background-color 0.3s ease-out;
+    transition: background-color 0.3s ease-out;
+    display: inline-block;
+    text-align: center;
+}
+
+.clear-button:hover {
+    background-color: #aaa;
+}
+
+.search-button {
+    padding: 0rem;
+    line-height: 3.75rem;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0px 2px;
+    background-color: #244846;
+    color: #fff;
+    border: none;
+    box-sizing: border-box;
+    -webkit-transition: background-color 0.3s ease-out;
+    -moz-transition: background-color 0.3s ease-out;
+    -o-transition: background-color 0.3s ease-out;
+    transition: background-color 0.3s ease-out;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: #4f807e;
+}
+
 
 /* Full recipe page */
 div strong {
@@ -506,6 +551,7 @@ div strong {
     border-radius: 10px;
     margin-top: 0rem;
     margin-bottom: 0rem;
+    line-height: 3.5rem;
 }
 
 .input-title {
