--- a/templates/base.html
+++ b/templates/base.html
@@ -102,9 +102,9 @@
                 </div>
                 <div class="col s8 offset-s2 l4 offset-l1 margin-bottom-twentyfive margin-top-twentyfive">
                     <h4><span>Stay in touch</span></h4>
-                    <a href="https://www.facebook.com" target="_blank"><i class="social fab fa-facebook-f"></i></a>
-                    <a href="https://twitter.com" target="_blank"><i class="social fab fa-twitter"></i></a>
-                    <a href="https://www.pinterest.ie" target="_blank"><i class="social fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com" class="social-icons" aria-label="Go to our facebook page (opens in new tab)" target="_blank"><i class="social fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" class="social-icons" aria-label="Go to our twitter page (opens in new tab)" target="_blank"><i class="social fab fa-twitter"></i></a>
+                    <a href="https://www.pinterest.ie" class="social-icons" aria-label="Go to our pinterest page (opens in new tab)" target="_blank"><i class="social fab fa-pinterest"></i></a>
                 </div>
             </div>
             <p class="developed-by">Developed by Lukasz Pasich</p>
