FEAT: Add recipe suggestions when no search results found

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -36,8 +36,22 @@
 {% endfor %}
 </div>
 {% else %}
-<h6 class="center-align margin-top-fifty margin-bottom-fifty">No results found</h3>
-<p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
+<h6 class="center-align margin-top-fifty margin-bottom-twentyfive">No results found</h3>
+<p class="center-align">But we found other recipes that may interest you.</p>
+
+    <div class="flex-container margin-top-fifty">
+    {% for recipesearch in recipesearched %}
+        <div>
+            <a class="recipes-overlay-container" href="{{ url_for('full_recipe', recipe_id=recipesearch._id) }}">
+                <img class="flex-image" src="{{ recipesearch.image }}" alt="Recipe">
+                <div class="recipes-overlay"></div>
+                <div class="recipes-title">{{ recipesearch.recipe_name }}</div>
+            </a>
+        </div>
+    {% endfor %}
+    </div>
 {% endif %}
+
+<p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
 
 {% endblock %}
