--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -40,7 +40,7 @@
 {% else %}
 
 <!-- ...and this is shown if search returns no results-->
-<h6 class="center-align margin-top-fifty margin-bottom-twentyfive">No results found</h3>
+<h6 class="center-align margin-top-twentyfive margin-bottom-twentyfive">No results found</h3>
 <p class="center-align">But we found other recipes that may interest you.</p>
 
     <div class="flex-container margin-top-fifty">
