--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -11,7 +11,7 @@
             <label class="add-recipe-label" for="category_name"><i class="fas fa-folder-open add-recipe-icon"></i>Category Name:</label>
             <div class="input-field col s12">
                 <input placeholder="(max 20 characters)" id="category_name" name="category_name" type="text"
-                    maxlength="20" class="validate" required>
+                    minlength="2" maxlength="20" class="validate" required>
             </div>
         </div>
 
