--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -37,7 +37,7 @@
             <div class="col s6">
                 <label class="add-recipe-label" for="serves">Serves:</label><br>
                 <div class="input-field col s12">
-                    <input placeholder="(number of servings)" id="serves" name="serves" type="text"
+                    <input placeholder="(servings)" id="serves" name="serves" type="text"
                         pattern="[0-9]{1,2}$" class="validate" required>
                 </div>
             </div>
@@ -54,7 +54,7 @@
         <div class="row">
             <label class="add-recipe-label" for="ingredients">Ingredients:</label>
             <div class="input-field col s12">
-                <textarea placeholder="(add each ingredient on a new line)" id="ingredients" name="ingredients" class="materialize-textarea validate" required></textarea>
+                <textarea placeholder="(new line for each ingredient)" id="ingredients" name="ingredients" class="materialize-textarea validate" required></textarea>
             </div>
         </div>
 
@@ -62,7 +62,7 @@
         <div class="row">
             <label class="add-recipe-label" for="method">Method:</label>
             <div class="input-field col s12">
-                <textarea placeholder="(add each step on a new line)" id="ingredients" name="ingredients" class="materialize-textarea validate" required></textarea>
+                <textarea placeholder="(new line for each step)" id="ingredients" name="ingredients" class="materialize-textarea validate" required></textarea>
             </div>
         </div>
 
