--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
         </div>
         <!-- Sign Up Button -->
         <div class="row margin-top-fifty">
-            <button type="submit" class="col s6 offset-s3 green-button-full">Log in</button>
+            <button type="submit" class="col s6 offset-s3 green-button-full cursor-pointer">Log in</button>
         </div>
     </form>
   </div>
