FEAT: Add uploaded by information to full_recipe.html

--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -29,6 +29,9 @@
                     <strong class="strong-method">Method: </strong>
                     <p>{{ fullrecipe.method }}</p>
                 </div>
+                <div class="col s12">
+                    <p><strong>Uploaded by: </strong>{{ fullrecipe.created_by }}</p>
+                </div>
             </div>
         </div>
         <!-- Edit / Delete buttons -->
