--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -20,7 +20,16 @@
 
             <!-- Recipe image / ingredients / method -->
             <div class="row">
-                <img class="col s12 m8" src="{{ fullrecipe.image }}" alt="Recipe">
+                <!-- <img class="col s12 m8" src="{{ fullrecipe.image }}" alt="Recipe"> -->
+
+                <!----- CODE CREDIT - Handle broken image link ----->
+                <!-- https://themeisle.com/blog/missing-images-on-website/ -->
+
+                <img class="col s12 m8" src="{{ fullrecipe.image }}" alt="Recipe" 
+                onError="this.onerror=null; this.src='https://i.imgur.com/pKDfecc.jpg';">
+
+                <!----- END OF CODE CREDIT ----->
+
                 <div class="col s12 m4 margin-top-twentyfive">
                     <strong>Ingredients: </strong>
                     <p>{{ fullrecipe.ingredients }}</p>
