--- a/templates/myrecipes.html
+++ b/templates/myrecipes.html
@@ -29,7 +29,16 @@
         {% for myrecipe in myrecipes %}
             <div>
                 <a class="recipes-overlay-container" href="{{ url_for('full_recipe', recipe_id=myrecipe._id) }}">
-                    <img class="flex-image" src="{{ myrecipe.image }}" alt="Recipe">
+                    <!-- <img class="flex-image" src="{{ myrecipe.image }}" alt="Recipe"> -->
+
+                    <!----- CODE CREDIT - Handle broken image link ----->
+                    <!-- https://themeisle.com/blog/missing-images-on-website/ -->
+
+                    <img class="flex-image" src="{{ myrecipe.image }}" alt="Recipe" 
+                    onError="this.onerror=null; this.src='https://i.imgur.com/pKDfecc.jpg';">
+
+                    <!----- END OF CODE CREDIT ----->
+                    
                     <div class="recipes-overlay"></div>
                     <div class="recipes-title">{{ myrecipe.recipe_name }}</div>
                 </a>
