FIX: Handle broken image link on search results page

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -62,7 +62,7 @@
         <div class="row">
             <label class="add-recipe-label" for="method">Method:</label>
             <div class="input-field col s12">
-                <textarea placeholder="(new line for each step)" id="ingredients" name="ingredients" class="materialize-textarea validate" required></textarea>
+                <textarea placeholder="(new line for each step)" id="method" name="method" class="materialize-textarea validate" required></textarea>
             </div>
         </div>
 
