--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -57,7 +57,16 @@
     {% for recipesearch in recipesearched %}
         <div>
             <a class="recipes-overlay-container" href="{{ url_for('full_recipe', recipe_id=recipesearch._id) }}">
-                <img class="flex-image" src="{{ recipesearch.image }}" alt="Recipe">
+                <!-- <img class="flex-image" src="{{ recipesearch.image }}" alt="Recipe"> -->
+
+                <!----- CODE CREDIT - Handle broken image link ----->
+                <!-- https://themeisle.com/blog/missing-images-on-website/ -->
+
+                <img class="flex-image" src="{{ recipesearch.image }}" alt="Recipe" 
+                onError="this.onerror=null; this.src='https://i.imgur.com/pKDfecc.jpg';">
+
+                <!----- END OF CODE CREDIT ----->
+
                 <div class="recipes-overlay"></div>
                 <div class="recipes-title">{{ recipesearch.recipe_name }}</div>
             </a>
