FEAT: Add functionality for placing advert where certain keywords exist in recipes

--- a/templates/full_recipe.html
+++ b/templates/full_recipe.html
@@ -43,8 +43,16 @@
                 </div>
             </div>
         </div>
-        <!-- Edit / Delete buttons -->
 
+        {% for advert in adverts %}     
+            {% if recipe._id == advert %}
+                <p>ad</p>
+                <p>{{ adverts }}</p>
+            {% endif %}
+
+        {% endfor %}
+
+        <!-- Edit / Delete buttons -->
         {% if session.user|lower == fullrecipe.created_by|lower %}
             <div class="row margin-top-seventyfive center-align">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="col s5 offset-s1 m4 offset-m2 l3 offset-l3 button-edit">Edit</a>
