FEAT: Add contact view in app.py and create contact.html template

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,7 @@
                         We’d love to hear from you.
                         Simply fill in our online contact form or jump onto Facebook,
                         Pinterest or Twitter to learn more.
-                        <a href="#">Get in touch.</a>
+                        <a href="{{ url_for('contact') }}">Get in touch.</a>
                     </p>
                 </div>
                 <div class="col s8 offset-s2 l4 offset-l1 margin-bottom-twentyfive margin-top-twentyfive">
@@ -107,7 +107,7 @@
                     <a href="https://www.pinterest.ie" class="social-icons" aria-label="Go to our pinterest page (opens in new tab)" target="_blank"><i class="social fab fa-pinterest"></i></a>
                 </div>
             </div>
-            <p class="developed-by">Developed by Lukasz Pasich</p>
+            <p class="developed-by">Developed by Lukasz Pasich &copy;2021</p>
         </div>
     </footer>
 
